Access to Treasury API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=purchases
 
+treasury.api.url=https://api.fiscaldata.treasury.gov/services/api/fiscal_service
+treasury.api.ratesEndpoint=/v1/accounting/od/rates_of_exchange
+
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:purchasedb
 spring.datasource.driverClassName=org.h2.Driver
@@ -13,4 +16,4 @@ spring.h2.console.path=/h2-console
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
